--- a/css/style.css
+++ b/css/style.css
@@ -1591,7 +1591,7 @@ body {
         margin-bottom: 10%;
     }
     .sectionThree .sectionThreeImg {
-        width: auto;
+        width: 97%;
         height: 50vh;
     }
     .subDestinos__seccion__capsula {
